# solar-detector

./: .gitignore  CMakeLists.txt  Makefile  README.md  host.sh  Эскиз_Solar_Detector.SLDPRT  макет.odp
Engineering/: Lower_panel (Concept).SLDPRT
Engineering/Gerber_PCB_Photodiode plate_2024-04-13/: Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
code/detector/: .mxproject  CMakeLists.txt  Makefile  detector.ioc
code/host/: CMakeLists.txt  Makefile
engineering/: 1st_Cap.SLDPRT  1st_Cap.STL  2nd_Cap.SLDPRT  2nd_Cap.STL  Double Side panel (Arrowful).SLDPRT  Double Side panel (Arrowful).STL  Double Side panel (Arrowless).SLDPRT  Double Side panel (Arrowless).STL  Double Side panel (Concept).SLDPRT  Handle.SLDPRT  Handle.STL  Lower_panel (Concept).SLDPRT  Lower_panel.SLDPRT  Lower_panel.STL  OrgGlass part of Upper Panel (Concept).SLDPRT  OrgGlass part of Upper Panel.SLDPRT  OrgGlass part of Upper Panel.STL  OrgGlass.cdr  Purchase list.xlsx  Rack.SLDPRT  Rack.STL  Shut Side panel (Concept).SLDPRT  Side panel (Oneholed).SLDPRT  Side panel (Oneholed).STL  Side panel (Twoholed).SLDPRT  Side panel (Twoholed).STL  Upper panel (Concept).SLDPRT  Upper panel.SLDPRT  Upper panel.STL
engineering/Gerber_PCB_Microcontroller board(Photodiode plate)_2024-05-03/: Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  (+3 more)
presentation/: финал.odp
src/: main.c
(+109 files in other folders)
